<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_for_the_loading_page"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_page_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="472dp"
        android:text="@string/new_game"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="@+id/btnAbout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="124dp"
        android:text="@string/about"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewGame" />
</androidx.constraintlayout.widget.ConstraintLayout>